--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 
 [program:pocketbase]
-command=/usr/local/bin/pocketbase serve --http=0.0.0.0:8090
+command=/app/start-pocketbase.sh
 directory=/app
 autostart=true
 autorestart=true
