--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sveltejs/adapter-node": "^5.2.10",
     "@sveltejs/kit": "^2.50.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "@types/node": "^25.2.0",
     "concurrently": "^9.1.2",
     "svelte": "^5.48.2",
     "svelte-check": "^4.3.5",
