--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@iconify/svelte": "^5.2.1",
     "@sveltejs/adapter-auto": "^7.0.0",
-    "@sveltejs/adapter-node": "^5.2.10",
+    "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.50.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@types/node": "^25.2.0",
