--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
-    "pocketbase": "^0.26.8"
+    "pocketbase": "^0.26.8",
+    "svelte-sonner": "^1.0.7"
   }
 }
