--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 background.png
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
